changes in navbar

--- a/ExectileDysfunctionProcedure.html
+++ b/ExectileDysfunctionProcedure.html
@@ -79,7 +79,7 @@
         </div>
       </a>
       <a class="nav-item nav-link" href="appoinment.html" id="navlink2">
-        <button type="button" class="btn btn-primary">APPOINTMENT</button>
+        <button type="button" class="btn btn-primary mt-2">APPOINTMENT</button>
       </a>
     </div>
   </div>
