--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
           <h5 class="ml-2">+79979901881</h5>
         </div>
       </a>
-      <a class="nav-item nav-link" href="appoinment.html" id="navlink2">
+      <a class="nav-item nav-link mt-2" href="appoinment.html" id="navlink2">
         <button type="button" class="btn btn-primary">APPOINTMENT</button>
       </a>
     </div>
@@ -115,9 +115,12 @@
                       <h1  class="text-center">Our Story</h1>
                       <p>As a leading cosmetic gynecology hospital in kakinada, we offer a range of   state-of-the-art treatments to make you look and feel Your best. Our team of experienced gynecologists and plastic surgeons is committed to providing you with personalized care and exceptional results. </p>
                       <p>Our commitment to excellence and patient satisfaction has earned us a reputation as the benchmark in intimate Wellness and  aesthetic treatments.</p>
-                      <p>Don't compromise on Your well-being. Trust the best Aesthetic Gynecology 
+                      <p class="pb-5">Don't compromise on Your well-being. Trust the best Aesthetic Gynecology 
                       Hospital in Kakinada - Aruna Hospital Couples Clinic. Arrange a consultation with our experts today and take the first step towards more self-confidence.
                       </p>
+                      <div class="aboutbtn text-center"> 
+                         <a href="appoinment.html" class="btn btn-primary">APPOINTMENT</a>
+                      </div> 
                   </div>
                 </div>
               </div>
