--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <h5 class="ml-2">+79979901881</h5>
         </div>
       </a>
-      <a class="nav-item nav-link" href="appoinment.html" id="navlink2">
+      <a class="nav-item nav-link mt-2" href="appoinment.html" id="navlink2">
         <button type="button" class="btn btn-primary">APPOINTMENT</button>
       </a>
     </div>
