--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
           <h5 class="ml-2">+79979901881</h5>
         </div>
       </a>
-      <a class="nav-item nav-link" href="appoinment.html" id="navlink2">
+      <a class="nav-item nav-link mt-2" href="appoinment.html" id="navlink2">
         <button type="button" class="btn btn-primary">APPOINTMENT</button>
       </a>
     </div>
@@ -92,7 +92,10 @@
 
   <section class="md-5"> 
       <div class="container-fluid  contactus">
-          <div class="container"> 
+          <div class="container">
+            <div class="map-container">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3816.4228878816407!2d82.22867417428246!3d16.953736615154646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a38295c1ac74c55%3A0xb1fb05bbec301801!2ssri%20hari%20skin%2Fhair%2Flaser%20clinic!5e0!3m2!1sen!2sin!4v1700200968918!5m2!1sen!2sin" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div> 
               <div class="row"> 
                       <div class="col-lg-6  col-sm-12  col-md-12  contactuscontent">
                           <h1> Contact  Us</h1>
@@ -152,7 +155,7 @@
           <div class="col-lg-6  col-md-12  col-sm-12">
             <h1 class="mt-5">Get In touch</h1>
             <br>
-            <form id="contact">
+            <form id="contactform">
                 <input type="text" placeholder="Your Name" required>
                 <br>
                 <input type="text" placeholder="Your Email" required>
