--- a/femalesurgical.html
+++ b/femalesurgical.html
@@ -61,7 +61,7 @@
           </div>
           <div class="col-lg-3 col-sm-12 col-md-12 ms-5  mt-2 navbarappoinment">
             <li class="nav-item ps-5">
-              <a class="nav-link" href="appoinment.html"><button type="button"
+              <a class="nav-link mt-2" href="appoinment.html"><button type="button"
                   class="btn btn-primary">APPOINTMENT</button></a>
             </li>
           </div>
