--- a/male.html
+++ b/male.html
@@ -48,7 +48,7 @@
           <h5 class="ml-2">+79979901881</h5>
         </div>
       </a>
-      <a class="nav-item nav-link ms-2 " href="appoinment.html" id="navlink2" >
+      <a class="nav-item nav-link ms-2 mt-2" href="appoinment.html" id="navlink2" >
         <button type="button" class="btn btn-primary ms-3 ps-3 pe-3">APPOINTMENT</button>
       </a>
     </div>
@@ -75,7 +75,7 @@
           <img src="assets/img/phone.svg" alt="">
           <h5 class="ml-2">+79979901881</h5>
         </div>
-      </a>
+      </a>          
       <a class="nav-item nav-link" href="appoinment.html" id="navlink2">
         <button type="button" class="btn btn-primary">APPOINTMENT</button>
       </a>
