adding services images

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 
   
 <!-- Header Large Screen only  -->
-<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex">
+<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex shadow">
   <a class="navbar-brand" href="#">
     <img src="assets/img/logo.png" alt="">
   </a>
@@ -61,7 +61,7 @@
 
  
 <!-- Header Small and medium Screen only  -->
-<nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none">
+<nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow">
   <a class="navbar-brand" href="#">
     <img src="assets/img/logo.png" alt="">
   </a>
