--- a/femalenonsurgical.html
+++ b/femalenonsurgical.html
@@ -32,7 +32,7 @@
 
 
 <!-- Header Large Screen only  -->
-<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex">
+<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex shadow">
   <a class="navbar-brand" href="#">
     <img src="assets/img/logo.png" alt="">
   </a>
@@ -60,7 +60,7 @@
 
  
 <!-- Header Small and medium Screen only  -->
-<nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none">
+<nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow">
   <a class="navbar-brand" href="#">
     <img src="assets/img/logo.png" alt="">
   </a>
@@ -89,7 +89,7 @@
 
 <!--  MAIN SECTION -->
 <section>
-    <div class="container-fluid mb-5">
+    <div class="container-fluid mb-5 mt-5">
         <div class="row"> 
             <h3 class="pb-3">FEMALE NON SURGICAL</h3>
             <!-- <div class="col-lg-6 col-md-12 col-sm-12">
