--- a/femalesurgical.html
+++ b/femalesurgical.html
@@ -29,53 +29,66 @@
 
 </head>
 <body>
-
-<!-- Header -->
-<nav class="navbar navbar-expand-lg navbar-light top_nav_bat ">
-    <div class="col-3">
-      <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
-    </div>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+<!-- Header Large Screen only  -->
+<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex shadow">
+    <a class="navbar-brand" href="#">
+      <img src="assets/img/logo.png" alt="">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-      <ul class="navbar-nav">
-        <div class="row">
-          <div class="col-lg-3 col-sm-12 col-md-12 ps-5 me-5">
-            <li class="nav-item ps-5 me-5">
-              <a class="nav-link active" aria-current="page" href="index.html"><img src="assets/img/logo.png"
-                  alt=""></a>
-            </li>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav ml-auto justify-content-between">
+        <a class="nav-item nav-link ms-5 ps-5 pe-5" href="#" id="navlink2">
+          <img src="assets/img/logo.png" alt="">
+        </a>
+        <a class="nav-item nav-link ms-5 mt-2 ps-5  " href="#" id="navlink2">
+          <div class="d-flex align-items-center">
+            <img src="assets/img/phone.svg" alt="">
+            <h5 class="ml-2">+79979901881</h5>
           </div>
-          <div class="col-lg-3 col-sm-12 col-md-12 ms-5">
-            <li class="nav-item mt-3  navbarphonenumber">
-              <div class="row">
-                <div class="col-3 ps-2">
-                  <a class="nav-link" href="index.html"><img src="assets/img/phone.svg" alt=""> </a>
-                </div>
-                <div class="col-9 mt-2">
-                  <h5>+79979901881</h5>
-                </div>
-              </div>
-            </li>
-          </div>
-          <div class="col-lg-3 col-sm-12 col-md-12 ms-5  mt-2 navbarappoinment">
-            <li class="nav-item ps-5">
-              <a class="nav-link mt-2" href="appoinment.html"><button type="button"
-                  class="btn btn-primary">APPOINTMENT</button></a>
-            </li>
-          </div>
-        </div>
-      </ul>
+        </a>
+        <a class="nav-item nav-link ms-2 " href="appoinment.html" id="navlink2" >
+          <button type="button" class="btn btn-primary ms-3 ps-3 pe-3">APPOINTMENT</button>
+        </a>
+      </div>
     </div>
-</nav>
-
-<!-- Ending  Header -->
+  </nav>
+    <!-- Header -->
+  
+   
+  <!-- Header Small and medium Screen only  -->
+  <nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow">
+    <a class="navbar-brand" href="#">
+      <img src="assets/img/logo.png" alt="">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav ml-auto justify-content-between">
+        <a class="nav-item nav-link" href="#" id="navlink2">
+          <img src="assets/img/logo.png" alt="">
+        </a>
+        <a class="nav-item nav-link" href="#" id="navlink2">
+          <div class="d-flex align-items-center">
+            <img src="assets/img/phone.svg" alt="">
+            <h5 class="ml-2">+79979901881</h5>
+          </div>
+        </a>
+        <a class="nav-item nav-link" href="appoinment.html" id="navlink2">
+          <button type="button" class="btn btn-primary mt-2">APPOINTMENT</button>
+        </a>
+      </div>
+    </div>
+  </nav>
+  
+    <!-- Header -->
 
 
 <!--  MAIN SECTION -->
 <section>
-    <div class="container-fluid mb-5">
+    <div class="container-fluid mb-5 mt-5">
         <div class="row"> 
             <h3 class="pb-3">FEMALE  SURGICAL</h3>
               <img src="assets/img/femalesurgicalmainimage2.png"  class="img-fluid"  alt="">
@@ -138,7 +151,7 @@
         <div class="row"> 
             <h3 class="pb-3">LABIOMAJORAPLASTY </h3>
             <div class="col-lg-6 col-md-12 col-sm-12">
-                <img src="assets/img/8.png" class="img-fluid" alt="">
+                <img src="assets/img/surgicalimage3.png" class="img-fluid" alt="">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
                 <span>
@@ -173,7 +186,7 @@
                 </span>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
-                <img src="assets/img/8 (1).png" class="img-fluid" alt="">
+                <img src="assets/img/surgicalimage4.png" class="img-fluid" alt="">
             </div>
         </div>
     </div>
@@ -186,7 +199,7 @@
         <div class="row"> 
             <h3 class="pb-3">CLITORAL UNHOODING </h3>
             <div class="col-lg-6 col-md-12 col-sm-12">
-                <img src="assets/img/8 (1).png" class="img-fluid"  alt="">
+                <img src="assets/img/surgicalimage5.png" class="img-fluid"  alt="">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
              <span>
@@ -206,6 +219,7 @@
 
 
 <!--  MONSPLATY  -->
+
 <section>
     <div class="container mb-5">
         <div class="row"> 
@@ -222,11 +236,12 @@
                 </span>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
-                <img src="assets/img/1.png" class="img-fluid" alt="">
+                <img src="assets/img/surgicalimage6.png" class="img-fluid" alt="">
             </div>
         </div>
     </div>
 </section>
+
 <!--  ENDING  MONSPLATY -->
 
 
