--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="assets/style.css">
 
   <!-- Adding bootstrap plugin -->
-
+ 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -47,94 +47,10 @@
 
 <body>
 
-  <!-- Header -->
-  <!-- <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-fixed-top">
-    <div class="container-fluid d-flex justify-content-between align-items-center">
-      <div class="col-3">
-        <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
-      </div>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse   navbar-collapse justify-content-center ml-auto" id="navbarNav">
-        <ul class="navbar-nav">
-          <div class="row">
-            <div class="col-lg-3 col-sm-12 col-md-12 ps-5 me-5">
-              <li class="nav-item ps-5 me-5">
-                <a class="nav-link active" aria-current="page" href="index.html"><img src="assets/img/logo.png"
-                    alt=""></a>
-              </li>
-            </div>
-            <div class="col-lg-3 col-sm-12 col-md-12 ms-5">
-              <li class="nav-item mt-3  navbarphonenumber">
-                <div class="row">
-                  <div class="col-3 ps-2">
-                    <a class="nav-link" href="index.html"><img src="assets/img/phone.svg" alt=""> </a>
-                  </div>
-                  <div class="col-9 mt-2">
-                    <h5>+79979901881</h5>
-                  </div>
-                </div>
-              </li>
-            </div>
-            <div class="col-lg-3 col-sm-12 col-md-12 ms-5  mt-2 navbarappoinment">
-              <li class="nav-item ps-5">
-                <a class="nav-link" href="appoinment.html"><button type="button"
-                    class="btn btn-primary">APPOINTMENT</button></a>
-              </li>
-            </div>
-          </div>
-        </ul>
-      </div>
-    </div>
-  </nav> -->
-<!-- Toogle working close and open 
-  <nav class="navbar navbar-expand-lg navbar-light top_nav_bat ">
-    <div class="col-3">
-      <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
-    </div>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-      <ul class="navbar-nav">
-        <div class="row">
-          <div class="col-lg-3 col-sm-12 col-md-12 ps-5 me-5">
-            <li class="nav-item ps-5 me-5">
-              <a class="nav-link active" aria-current="page" href="index.html"><img src="assets/img/logo.png"
-                  alt=""></a>
-            </li>
-          </div>
-          <div class="col-lg-3 col-sm-12 col-md-12 ms-5">
-            <li class="nav-item mt-3  navbarphonenumber">
-              <div class="row">
-                <div class="col-3 ps-2">
-                  <a class="nav-link" href="index.html"><img src="assets/img/phone.svg" alt=""> </a>
-                </div>
-                <div class="col-9 mt-2">
-                  <h5>+79979901881</h5>
-                </div>
-              </div>
-            </li>
-          </div>
-          <div class="col-lg-3 col-sm-12 col-md-12 ms-5  mt-2 navbarappoinment">
-            <li class="nav-item ps-5">
-              <a class="nav-link" href="appoinment.html"><button type="button"
-                  class="btn btn-primary">APPOINTMENT</button></a>
-            </li>
-          </div>
-        </div>
-      </ul>
-    </div>
-</nav> -->
-
-
-
-
-
+<!-- HEADER   -->
 <!-- Header Large Screen only  -->
-<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex">
+
+<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow">
   <a class="navbar-brand" href="#">
     <img src="assets/img/logo.png" alt="">
   </a>
@@ -158,11 +74,10 @@
     </div>
   </div>
 </nav>
-  <!-- Header -->
-
- 
+  
 <!-- Header Small and medium Screen only  -->
-<nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none">
+
+<nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow">
   <a class="navbar-brand" href="#">
     <img src="assets/img/logo.png" alt="">
   </a>
@@ -187,7 +102,7 @@
   </div>
 </nav>
 
-  <!-- Header -->
+  
   
   <!-- Ending  Header -->
 
@@ -196,9 +111,9 @@
       <img src="assets/img/facebook.png" alt="">
     </div>
     <div class="side-btn-div d-none">
-      <div class="col-lg-3 mt-3">
+      <!-- <div class="col-lg-3 mt-3">
         <img src="assets/img/facebook.png" alt="">
-      </div>
+      </div> -->
       <div class="col-lg-3 mt-3">
         <img src="assets/img/linked.png" alt="">
       </div>
@@ -215,6 +130,7 @@
   </div>
 
   <!-- FULFILING LOVE -->
+
   <section class="md-5 d-flex">
     <div class="container">
       <div class="row">
@@ -244,29 +160,41 @@
     </div>
   </section>
 
-  <!-- NAVBAR PART -->
-  <section>
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary  navbar-fixed-top w-75 ms-5 ps-5" id="navleft">
-      <div class="container-fluid">
-        <a class="navbar-brand text-light" href="#"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-center ml-auto" id="navbarNavAltMarkup">
-          <div class="navbar-nav navbarsearchimage">
-            <a class="nav-link active text-light" aria-current="page" href="index.html">Home</a>
-            <a class="nav-link text-light ms-5" href="index.html">Department</a>
-            <a class="nav-link text-light ms-5 me-5" href="index.html">Services</a>
-            <a class="nav-link text-light ms-5 me-5" href="about.html">About</a>
-            <a class="nav-link text-light ms-5  me-5" href="contact.html">Contact</a>
-            <a class="nav-link text-light ms-5  me-5" href="#"><img src="assets/img/search.png" alt=""></a>
+  <!--  ENDING  FULFILING  LOVE -->
+
+  <!-- FULFILING  LOVE NAVBAR PART -->
+
+  <section> 
+    <div class="container" id="fulfilinglovenavbarpart">
+      <div class="row container  justify-content-center pt-3 d-none d-md-block d-lg-flex">
+         <div class="col-lg-6 row">
+            <div class="col-1"></div>
+            <div class="col-lg-3">
+              <a href="index.html"><p>Home</p></a> 
+            </div>
+            <div class="col-lg-4">
+               <a href="index.html"><p>Department</p></a> 
+            </div>
+            <div class="col-lg-3">
+              <a href="index.html"><p>Services</p></a> 
+            </div>
+         </div>
+         <div class="col-lg-6 row">
+          <div class="col-4">
+              <a href="about.html"><p>About</p></a> 
           </div>
-        </div>
+          <div class="col-lg-4">
+              <a href="contact.html"><p>Contact</p></a> 
+          </div>
+          <div class="col-4" id="fulfilinglovenavbarpartsearch">
+               <img src="assets/img/search (2).png" alt="" height="80%"  width="50%">
+          </div> 
+         </div>
       </div>
-    </nav>
+    </div>
   </section>
-  <!--  ENDING NAVBAR PART -->
+
+  <!-- FULFILING  LOVE ENDING NAVBAR PART -->
 
   <!-- ARE YOU LOOKING  -->
   <section class="mt-5 ms-5 me-5">
