--- a/male.html
+++ b/male.html
@@ -30,7 +30,7 @@
 <body>
 
 <!-- Header Large Screen only  -->
-<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex">
+<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex shadow">
   <a class="navbar-brand" href="#">
     <img src="assets/img/logo.png" alt="">
   </a>
@@ -58,7 +58,7 @@
 
  
 <!-- Header Small and medium Screen only  -->
-<nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none">
+<nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow">
   <a class="navbar-brand" href="#">
     <img src="assets/img/logo.png" alt="">
   </a>
@@ -89,7 +89,7 @@
 <!--  MAIN SECTION -->
 
 <section>
-  <div class="container-fluid mb-5">
+  <div class="container-fluid mb-5 mt-5">
       <div class="row"> 
           <h3 class="pb-3">MALE  SERVICES</h3>
               <img src="assets/img/maleservicemainimg1.png"  class="img-fluid" alt="">
