changes in navbar

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
         </div>
       </a>
       <a class="nav-item nav-link ms-2 " href="appoinment.html" id="navlink2" >
-        <button type="button" class="btn btn-primary ms-3 ps-3 pe-3">APPOINTMENT</button>
+        <button type="button" class="btn btn-primary ms-3 ps-3 pe-3" id="button">APPOINTMENT</button>
       </a>
     </div>
   </div>
@@ -80,7 +80,7 @@
         </div>
       </a>
       <a class="nav-item nav-link mt-2" href="appoinment.html" id="navlink2">
-        <button type="button" class="btn btn-primary">APPOINTMENT</button>
+        <button type="button" class="btn btn-primary" id="button">APPOINTMENT</button>
       </a>
     </div>
   </div>
