--- a/femalesurgical.html
+++ b/femalesurgical.html
@@ -49,7 +49,7 @@
           </div>
         </a>
         <a class="nav-item nav-link ms-2 " href="appoinment.html" id="navlink2" >
-          <button type="button" class="btn btn-primary ms-3 ps-3 pe-3">APPOINTMENT</button>
+          <button type="button" class="btn btn-primary ms-3 ps-3 pe-3" id="button">APPOINTMENT</button>
         </a>
       </div>
     </div>
@@ -77,7 +77,7 @@
           </div>
         </a>
         <a class="nav-item nav-link" href="appoinment.html" id="navlink2">
-          <button type="button" class="btn btn-primary mt-2">APPOINTMENT</button>
+          <button type="button" class="btn btn-primary mt-2" id="button">APPOINTMENT</button>
         </a>
       </div>
     </div>
