--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
       </a>
       <a class="nav-item nav-link ms-2 " href="appoinment.html" id="navlink2" >
-        <button type="button" class="btn btn-primary ms-3 ps-3 pe-3">APPOINTMENT</button>
+        <button type="button" class="btn btn-primary ms-3 ps-3 pe-3"  id="button">APPOINTMENT</button>
       </a>
     </div>
   </div>
@@ -96,7 +96,7 @@
         </div>
       </a>
       <a class="nav-item nav-link mt-2" href="appoinment.html" id="navlink2">
-        <button type="button" class="btn btn-primary">APPOINTMENT</button>
+        <button type="button" class="btn btn-primary" id="button">APPOINTMENT</button>
       </a>
     </div>
   </div>
@@ -211,7 +211,7 @@
           <br>
           <br>
           <!-- <button type="button" class="btn btn-primary">APPOINTMENT</button> -->
-          <a href="appoinment.html" class="btn btn-primary">APPOINTMENT</a>
+          <a href="appoinment.html" class="btn btn-primary" id="button">APPOINTMENT</a>
         </div>
       </div>
     </div>
@@ -367,7 +367,7 @@
             is committed to providing you with personalized care and exceptional results. </h6>
           <br>
           <br>
-          <a href="about.html" class="btn btn-primary">learn more</a>
+          <a href="about.html" class="btn btn-primary" >learn more</a>
         </div>
         <div class="col-lg-6 col-sm-12 col-md-12">
           <img src="assets/img/image3.png" class="img-fluid" alt="">
@@ -494,7 +494,7 @@
               consultation appointment today!</h6>
             <br>
             <br>
-            <a href="femalenonsurgical.html" class="btn btn-primary">learn more</a>
+            <a href="femalenonsurgical.html" class="btn btn-primary" id="button">no more</a>
           </div>
 
         </div>
@@ -513,16 +513,16 @@
               personalized care and exceptional results. </h6>
             <h6>Our experienced team offers individual support in a discreet and pleasent atmosphere </h6>
             <br><br>
-            <a href="contact.html" class="btn btn-primary">Contact Us</a>
+            <a href="contact.html" class="btn btn-primary" id="button">Contact Us</a>
           </div>
           <div class="col-lg-6 col-sm-12 col-md-12 row ">
-            <div class="col-lg-4 col-sm-6 col-md-6">
+            <div class="col-lg-4 col-sm-6 col-md-6 ms-5 me-5">
               <img src="assets/img/doctor1.png" class="img-fluid" alt="doctorimage1">
             </div>
             <!-- <div class="col-lg-4 col-sm-6 col-md-6">
                                <img src="assets/img/doctor2.png" alt="doctorimage2">
                           </div> -->
-            <div class="col-lg-4 col-sm-6 col-md-6">
+            <div class="col-lg-4 col-sm-6 col-md-6 ms-5">
               <img src="assets/img/doctor3.png" class="img-fluid" alt="doctorimage3">
             </div>
           </div>
