adding doctor images

--- a/ExectileDysfunctionProcedure.html
+++ b/ExectileDysfunctionProcedure.html
@@ -32,7 +32,8 @@
 
 
 <!-- Header Large Screen only  -->
-<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex shadow">
+
+<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow">
   <a class="navbar-brand" href="#">
     <img src="assets/img/logo.png" alt="">
   </a>
@@ -44,14 +45,14 @@
       <a class="nav-item nav-link ms-5 ps-5 pe-5" href="#" id="navlink2">
         <img src="assets/img/logo.png" alt="">
       </a>
-      <a class="nav-item nav-link ms-5 mt-2 ps-5  " href="#" id="navlink2">
+      <a class="nav-item nav-link ms-5 mt-3 pt-3  ps-5  " href="#" id="navlink2">
         <div class="d-flex align-items-center">
           <img src="assets/img/phone.svg" alt="">
           <h5 class="ml-2">+79979901881</h5>
         </div>
       </a>
       <a class="nav-item nav-link ms-2 " href="appoinment.html" id="navlink2" >
-        <button type="button" class="btn btn-primary ms-3 ps-3 pe-3" id="button">APPOINTMENT</button>
+        <button type="button" class="btn btn-primary ms-3 ps-3 pe-3 mt-3"  id="button">APPOINTMENT</button>
       </a>
     </div>
   </div>
@@ -285,11 +286,12 @@
               </div>
               <!--  FIRST BLOCK -->
               <div class="col-lg-2  col-sm-6 footerfirstblock">
-                  <h5 class="pb-3">QUICK LINKS</h5>
-                  <h6><a href="index.html">Home</a></h6>
-                  <h6><a href="index.html">Department</a></h6>
-                  <h6><a href="about.html">About</a></h6>
-                  <h6><a href="contact.html">Contanct</a></h6>
+                <h5 class="pb-3">QUICK LINKS</h5>
+                <h6><a href="index.html">Home</a></h6>
+                <h6><a href="index.html">About</a></h6>
+                <h6><a href="femalenonsurgical.html">Services</a></h6>
+                <h6><a href="gallery.html">Gallery</a></h6>
+                <h6><a href="contact.html">Contact</a></h6>
               </div>
               <!--  SECOND BLOCK -->
               <div class="col-lg-3  col-sm-6  footersecondblock">
