--- a/gallery.html
+++ b/gallery.html
@@ -92,7 +92,7 @@
 <section>
   <div class="container-fluid mb-5 mt-5">
       <div class="row"> 
-          <h3 class="pb-3">MALE  SERVICES</h3>
+          <h3 class="pb-3">GALLERY</h3>
               <img src="assets/img/maleservicemainimg1.png"  class="img-fluid" alt="">
       </div>
   </div>
@@ -101,81 +101,6 @@
 <!--  ENDING  MAIN SECTION -->
 
 
-<!--  Erectile Dysfunction  -->
-<section>
-    <div class="container mb-5">
-        <div class="row"> 
-            <h3 class="pb-5">Erectile Dysfunction </h3> 
-            <div class="col-lg-6 col-md-12 col-sm-12">
-                <img src="assets/img/maleserviceimg1.png" class="img-fluid" alt="">
-            </div>
-            <div class="col-lg-6 col-md-12 col-sm-12">
-               <span>
-                    Erectile Dysfunction: Regaining Confidence and Intimacy
-                    Erectile Dysfunction (ED) is a condition where a man experiences difficulty achieving or maintaining an erection sufficient for sexual activity. At Aruna Hospital Couple Clinics, we provide comprehensive solutions to help you regain confidence and intimacy.<br>
-                    Our Approach:<br>
-                    Diagnosis: Our experienced specialists determine the underlying causes of your ED.<br>
-                    Treatment: We offer personalized treatment plans, which
-                    h may include medications, lifestyle adjustments, or other therapies.<br>
-                    Support: Our compassionate team is here to address your concerns and guide you toward improved sexual health.<br>
-                    Don't let ED impact your quality of life. Contact Aruna Hospital Couple Clinics to explore your options and start your journey toward a more satisfying and fulfilling sex life.
-               </span>
-            </div>
-        </div>
-    </div>
-</section>
-<!--  ENDING  Erectile Dysfunction -->
-
-<!--  Urine Incontinence  -->
-<section>
-    <div class="container mb-5">
-        <div class="row"> 
-              <h3 class="pb-5">Urine Incontinence </h3>
-            <div class="col-lg-6 col-md-12 col-sm-12">
-               <span>
-                    Urinary Incontinence: Regain Control and Confidence
-                    Urinary Incontinence is a common condition where individuals experience unintentional leakage of urine. At Aruna Hospital Couple Clinics, we offer effective solutions to help you regain control and confidence in your daily life.<br>
-                    Our Approach:<br>
-                    Assessment: Our experienced specialists assess the type and severity of your incontinence.<br>
-                    Treatment: We provide personalized treatment plans, which may include lifestyle modifications, pelvic floor exercises, medications, or other therapies.<br>
-                    Support: Our caring team is here to offer guidance and support as you manage and improve your urinary health.<br>
-                    Don't let urinary incontinence hold you back. Contact Aruna Hospital Couple Clinics to explore your options and start your journey toward a more comfortable and confident life
-               </span>
-            </div>
-            <div class="col-lg-6 col-md-12 col-sm-12">
-                <img src="assets/img/maleserviceimg2.png" class="img-fluid" alt="">
-            </div>
-        </div>
-    </div>
-</section>
-
-<!--  ENDING   Incontinence  -->
-
-<!--  Premature Ejaculation   -->
-<section>
-    <div class="container mb-5">
-        <div class="row"> 
-            <h3 class="pb-5">Premature Ejaculation  </h3>
-            <div class="col-lg-6 col-md-12 col-sm-12">
-                <img src="assets/img/maleserviceimg3.png" class="img-fluid" alt="">
-            </div>
-            <div class="col-lg-6 col-md-12 col-sm-12">
-               <span>
-                    Premature Ejaculation: Overcoming for a Satisfying Intimate Life
-                    Premature Ejaculation (PE) is a common condition where a man reaches orgasm and ejaculates sooner than desired during sexual activity. At Aruna Hospital Couple Clinics, we offer effective solutions to help you overcome this challenge and enjoy a more satisfying intimate life.<br>
-                    Our Approach:<br>
-                    Diagnosis: Our experienced specialists assess the nature and potential causes of your PE.<br>
-                    Treatment: We provide personalized treatment plans, which may include behavioral techniques, counseling, medications, or other therapies.<br>
-                    Support: Our understanding team is here to provide guidance and support as you work towards improving your sexual health and intimacy.
-                    Don't let Premature Ejaculation affect your confidence or relationship. Contact Aruna Hospital Couple Clinics to explore your options and start your journey toward a more fulfilling intimate life.
-               </span>
-            </div>
-        </div>
-    </div>
-</section>
-<!--  ENDING  Premature Ejaculation  -->
-
- 
 <!--  FOOTER -->
 
 <footer> 
@@ -199,15 +124,15 @@
                     </div>
                   </div>
               </div>
-               <!--  FIRST BLOCK -->
-            <div class="col-lg-2  col-sm-6 footerfirstblock">
-              <h5 class="pb-3">QUICK LINKS</h5>
-              <h6><a href="index.html">Home</a></h6>
-              <h6><a href="index.html">About</a></h6>
-              <h6><a href="femalenonsurgical.html">Services</a></h6>
-              <h6><a href="gallery.html">Gallery</a></h6>
-              <h6><a href="contact.html">Contact</a></h6>
-            </div>
+             <!--  FIRST BLOCK -->
+             <div class="col-lg-2  col-sm-6 footerfirstblock">
+                <h5 class="pb-3">QUICK LINKS</h5>
+                <h6><a href="index.html">Home</a></h6>
+                <h6><a href="index.html">About</a></h6>
+                <h6><a href="femalenonsurgical.html">Services</a></h6>
+                <h6><a href="gallery.html">Gallery</a></h6>
+                <h6><a href="contact.html">Contact</a></h6>
+              </div>
               <!--  SECOND BLOCK -->
               <div class="col-lg-3  col-sm-6  footersecondblock">
                 <h5 class="pb-3">ADDRESS</h5>
