--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
       <a class="nav-item nav-link ms-5 ps-5 pe-5" href="#" id="navlink2">
         <img src="assets/img/logo.png" alt="">
       </a>
-      <a class="nav-item nav-link ms-5 mt-2 ps-5  " href="#" id="navlink2">
+      <a class="nav-item nav-link ms-5 mt-3 pt-3  ps-5  " href="#" id="navlink2">
         <div class="d-flex align-items-center">
           <img src="assets/img/phone.svg" alt="">
           <h5 class="ml-2">+79979901881</h5>
         </div>
       </a>
       <a class="nav-item nav-link ms-2 " href="appoinment.html" id="navlink2" >
-        <button type="button" class="btn btn-primary ms-3 ps-3 pe-3"  id="button">APPOINTMENT</button>
+        <button type="button" class="btn btn-primary ms-3 ps-3 pe-3 mt-3"  id="button">APPOINTMENT</button>
       </a>
     </div>
   </div>
@@ -173,15 +173,15 @@
               <a href="index.html"><p>Home</p></a> 
             </div>
             <div class="col-lg-4">
-               <a href="index.html"><p>Department</p></a> 
+               <a href="about.html"><p>About</p></a> 
             </div>
             <div class="col-lg-3">
-              <a href="index.html"><p>Services</p></a> 
+              <a href="femalenonsurgical.html"><p>Services</p></a> 
             </div>
          </div>
          <div class="col-lg-6 row">
           <div class="col-4">
-              <a href="about.html"><p>About</p></a> 
+              <a href="gallery.html"><p>Gallery</p></a> 
           </div>
           <div class="col-lg-4">
               <a href="contact.html"><p>Contact</p></a> 
@@ -367,7 +367,7 @@
             is committed to providing you with personalized care and exceptional results. </h6>
           <br>
           <br>
-          <a href="about.html" class="btn btn-primary" >learn more</a>
+          <a href="about.html" class="btn btn-primary"  id="button" >learn more</a>
         </div>
         <div class="col-lg-6 col-sm-12 col-md-12">
           <img src="assets/img/image3.png" class="img-fluid" alt="">
@@ -504,29 +504,63 @@
 
   <!--  OUR DOCTORS -->
   <section>
-    <div class="container-fluid  ourservices">
+    <div class="container-fluid ourdoctors">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-6 col-sm-12 col-md-12">
-            <h1>Our Doctors</h1>
-            <h6>Our Doctors of experienced gynecologists and plastic surgeons is committed to providing you with
+        <!-- <div class="row"> -->
+          <!-- <div class="col-lg-6 col-sm-12 col-md-12"> -->
+            <h1 class="text-center mb-2">Our Doctors</h1>
+            <h6 class="text-center">Our Doctors of experienced gynecologists and plastic surgeons is committed to providing you with
               personalized care and exceptional results. </h6>
-            <h6>Our experienced team offers individual support in a discreet and pleasent atmosphere </h6>
-            <br><br>
-            <a href="contact.html" class="btn btn-primary" id="button">Contact Us</a>
-          </div>
-          <div class="col-lg-6 col-sm-12 col-md-12 row ">
+            <h6 class="text-center pb-3">Our experienced team offers individual support in a discreet and pleasent atmosphere </h6>
+            <br>
+          <!-- </div> -->
+        <!-- </div>   -->
+          <!-- <div class="col-lg-6 col-sm-12 col-md-12 row ">
             <div class="col-lg-4 col-sm-6 col-md-6 ms-5 me-5">
               <img src="assets/img/doctor1.png" class="img-fluid" alt="doctorimage1">
             </div>
-            <!-- <div class="col-lg-4 col-sm-6 col-md-6">
-                               <img src="assets/img/doctor2.png" alt="doctorimage2">
-                          </div> -->
             <div class="col-lg-4 col-sm-6 col-md-6 ms-5">
-              <img src="assets/img/doctor3.png" class="img-fluid" alt="doctorimage3">
+              <img src="assets/img/doctor2.png" class="img-fluid" alt="doctorimage3">
             </div>
+          </div> -->
+          <div class="container mb-5">
+            <div class="row">
+              <!-- First Doctor -->
+              <div class="col-md-6 mt-5 mt-md-0">
+                <div class="row">
+                  <div class="col-md-5">
+                    <!-- Doctor Image -->
+                    <img src="assets/img/doctor1.png" alt="Doctor 1" class="img-fluid   rounded-circle">
+                  </div>
+                  <div class="col-md-7 text-center text-md-left align-self-center">
+                    <!-- Doctor Details -->
+                    <h3 class="mt-3 mt-md-0">Dr. Chavakula <br/>Seshaggiri Rao</h3>
+                    <p class="mb-0">M.S. General Surgery</p>
+                    <p class="mb-0">Consultant Endoscopy</p>
+                    <p class="mb-0">Laparoscopic Surgeon</p>
+                  </div>
+                </div>
+              </div>
+              <!-- Second Doctor -->
+              <div class="col-md-6 mt-5 mt-md-0">
+                <div class="row">
+                  <div class="col-md-5">
+                    <!-- Doctor Image -->
+                    <img src="assets/img/doctor2.png" alt="Doctor 2" class="img-fluid   rounded-circle">
+                  </div>
+                  <div class="col-md-7 text-center text-md-left align-self-center">
+                    <!-- Doctor Details -->
+                    <h3 class="mt-3 mt-md-0">Dr. Chavakula <br/>Himmabindu</h3>
+                    <p class="mb-0">M.S., OBG</p>
+                    <p class="mb-0">Gynecology</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="contactbtn text-center mt-5"> 
+              <a href="contact.html" class="btn btn-primary" id="button">Contact Us</a>
           </div>
-        </div>
+          </div>
       </div>
     </div>
   </section>
@@ -606,9 +640,10 @@
             <div class="col-lg-2  col-sm-6 footerfirstblock">
               <h5 class="pb-3">QUICK LINKS</h5>
               <h6><a href="index.html">Home</a></h6>
-              <h6><a href="index.html">Department</a></h6>
-              <h6><a href="about.html">About</a></h6>
-              <h6><a href="contact.html">Contanct</a></h6>
+              <h6><a href="index.html">About</a></h6>
+              <h6><a href="femalenonsurgical.html">Services</a></h6>
+              <h6><a href="gallery.html">Gallery</a></h6>
+              <h6><a href="contact.html">Contact</a></h6>
             </div>
             <!--  SECOND BLOCK -->
             <div class="col-lg-3  col-sm-6  footersecondblock">
