--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,8 @@
 
   
 <!-- Header Large Screen only  -->
-<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex shadow">
+
+<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow">
   <a class="navbar-brand" href="#">
     <img src="assets/img/logo.png" alt="">
   </a>
@@ -45,14 +46,14 @@
       <a class="nav-item nav-link ms-5 ps-5 pe-5" href="#" id="navlink2">
         <img src="assets/img/logo.png" alt="">
       </a>
-      <a class="nav-item nav-link ms-5 mt-2 ps-5  " href="#" id="navlink2">
+      <a class="nav-item nav-link ms-5 mt-3 pt-3  ps-5  " href="#" id="navlink2">
         <div class="d-flex align-items-center">
           <img src="assets/img/phone.svg" alt="">
           <h5 class="ml-2">+79979901881</h5>
         </div>
       </a>
       <a class="nav-item nav-link ms-2 " href="appoinment.html" id="navlink2" >
-        <button type="button" class="btn btn-primary ms-3 ps-3 pe-3" id="button">APPOINTMENT</button>
+        <button type="button" class="btn btn-primary ms-3 ps-3 pe-3 mt-3"  id="button">APPOINTMENT</button>
       </a>
     </div>
   </div>
@@ -109,61 +110,26 @@
 
 <!-- ENDING  ABOUT US  -->
 
-
-<!--   GET IN TOUCH  -->
-<!-- 
-<section> 
-  <div class="card mb-5"  id="getintouchid"   style="width: 60rem;">
-       <div class="container-lg container-sm container-md  getintouch">
-        <div class="row">
-          <div class="col-lg-6  col-md-12  col-sm-12">
-             <img src="assets/img/about.png" alt="" height="200" width="300">
-          </div>
-          <div class="col-lg-6  col-md-12  col-sm-12">
-            <h1 class="mt-5">Get In touch</h1>
-            <br>
-            <form id="contact">
-                <input type="text" placeholder="Your Name" required>
-                <br>
-                <input type="text" placeholder="Your Email" required>
-                <br>
-                <input type="text" placeholder="Appoinment Date" required>
-                <br>
-                <input type="text" placeholder="write Your Message"
-                style="height: 100px;" required>
-                <br>
-                <button type="button" class="btn btn-primary btn-lg btn-block">SUBMIT</button>
-            </form>
-        </div>
-        </div>
-       </div>
-  </div>
-</section> -->
-
-<!--  ENDING  GET IN TOUCH -->
-
 <!--  GET IN TOUCH  -->
 
 <section class="mb-5">
   <div class="col-lg-12 col-sm-12 col-md-12"> 
     <div class=" container getintouch  justify-content-center"> 
-      <div class="container p-5"> 
+      <div class="container p-4 "> 
         <div class="row">
           <div class="col-lg-6  col-md-12  col-sm-12 mt-5">
-             <img src="assets/img/about.png" alt="" height="200" width="300">
+             <img src="assets/img/contact.png" alt="" >
           </div>
           <div class="col-lg-6  col-md-12  col-sm-12">
-            <h1 class="mt-5">Get In touch</h1>
+            <h1 class="mt-5 ms-5">Get In touch</h1>
             <br>
-            <form id="contactform">
-                <input type="text" placeholder="Your Name" required>
+            <form id="contactform pe-5">
+                <input type="text" placeholder="Your Name" class="ps-3" required>
                 <br>
-                <input type="text" placeholder="Your Email" required>
+                <input type="text" placeholder="Your Email"  class="ps-3" required>
                 <br>
-                <input type="text" placeholder="Appoinment Date" required>
-                <br>
-                <input type="text" placeholder="write Your Message"
-                style="height: 100px;" required>
+                <input type="text" placeholder="write Your Message"  class="ps-3 pb-5"
+                style="height: 240px;" required>
                 <br>
                 <button type="button" class="btn btn-primary btn-lg btn-block">SUBMIT</button>
             </form>
@@ -200,13 +166,14 @@
                   </div>
                 </div>
             </div>
-            <!--  FIRST BLOCK -->
+              <!--  FIRST BLOCK -->
             <div class="col-lg-2  col-sm-6 footerfirstblock">
-                <h5 class="pb-3">QUICK LINKS</h5>
-                <h6><a href="index.html">Home</a></h6>
-                <h6><a href="index.html">Department</a></h6>
-                <h6><a href="about.html">About</a></h6>
-                <h6><a href="contact.html">Contanct</a></h6>
+              <h5 class="pb-3">QUICK LINKS</h5>
+              <h6><a href="index.html">Home</a></h6>
+              <h6><a href="index.html">About</a></h6>
+              <h6><a href="femalenonsurgical.html">Services</a></h6>
+              <h6><a href="gallery.html">Gallery</a></h6>
+              <h6><a href="contact.html">Contact</a></h6>
             </div>
             <!--  SECOND BLOCK -->
             <div class="col-lg-3  col-sm-6  footersecondblock">
