--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
 
 
   <!-- Bootstrap CSS -->
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Bootstrap JS dependencies -->
+
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 
@@ -50,7 +52,7 @@
 <!-- HEADER   -->
 <!-- Header Large Screen only  -->
 
-<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow">
+<nav class="navbar navbar-expand-lg navbar-light d-sm-none d-md-none d-lg-flex  shadow">
   <a class="navbar-brand" href="#">
     <img src="assets/img/logo.png" alt="">
   </a>
@@ -75,9 +77,9 @@
   </div>
 </nav>
   
-<!-- Header Small and medium Screen only  -->
+<!-- Header Medium  screen only  -->
 
-<nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow">
+<nav class="navbar navbar-expand-lg navbar-light  d-sm-none  d-md-block  d-lg-none shadow">
   <a class="navbar-brand" href="#">
     <img src="assets/img/logo.png" alt="">
   </a>
@@ -102,7 +104,51 @@
   </div>
 </nav>
 
-  
+<!-- Ending Medium  screen only  -->  
+
+
+<!-- Header Small Screen only  -->
+<nav class="navbar  navbar-light d-sm-block d-md-none d-lg-none shadow">
+  <a class="navbar-brand" href="#">
+    <img src="assets/img/logo.png" alt="">
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav ml-auto justify-content-between">
+      <a class="nav-item nav-link" href="#" id="navlink2">
+        <img src="assets/img/logo.png" alt="">
+      </a>
+      <a class="nav-item nav-link" href="#" id="navlink2">
+        <div class="d-flex align-items-center">
+          <img src="assets/img/phone.svg" alt="">
+          <h5 class="ml-2">+79979901881</h5>
+        </div>
+      </a>
+      <a class="nav-item nav-link mt-2" href="index.html" id="navlink2">
+         <h5>Home</h5>
+      </a>
+      <a class="nav-item nav-link mt-2" href="about.html" id="navlink2">
+        <h5>About</h5>
+      </a>
+      <a class="nav-item nav-link mt-2" href="index.html" id="navlink2">
+        <h5>Services</h5>
+      </a>
+      <a class="nav-item nav-link mt-2" href="gallery.html" id="navlink2">
+        <h5>Gallery</h5>
+      </a>
+      <a class="nav-item nav-link mt-2" href="contact.html" id="navlink2">
+        <h5>Contact</h5>
+      </a>
+      <a class="nav-item nav-link mt-2" href="appoinment.html" id="navlink2">
+        <button type="button" class="btn btn-primary" id="button">APPOINTMENT</button>
+      </a>
+    </div>
+  </div>
+</nav>
+<!-- Ending Header Small Screen only -->
+
   
   <!-- Ending  Header -->
 
