adding images in gallery page

--- a/ExectileDysfunctionProcedure.html
+++ b/ExectileDysfunctionProcedure.html
@@ -91,95 +91,15 @@
 <!--  MAIN SECTION -->
 
 <section>
-    <div class="container mb-5 mt-5">
-        <div class="row"> 
-            <h3 class="pb-3">Exectile Dysfunction</h3>
-            <div class="col-lg-6 col-md-12 col-sm-12">
-                
-            </div>
-            <div class="col-lg-6 col-md-12 col-sm-12 p-3">
-          
-            </div>
-        </div>
+    <div class="container-fluid mb-5 mt-5">
+        <!-- <div class="row">  -->
+            <h3 class="pb-3">Exectile Dysfunction Procedure</h3>
+             <img src="assets/img/Exectiledysfunctionmainimg.png" class="img-fluid" alt="">
+        <!-- </div> -->
     </div>
   </section>
   
   <!--  ENDING  MAIN SECTION -->
-
-<!--    EXECTILE DYSFUNCTION   -->
-<section>
-    <div class="container mb-5">
-        <div class="row"> 
-            <h3 class="pb-5">Exectile Dysfunction</h3>
-            <div class="col-lg-6 col-sm-12 col-md-12">
-               <img src="assets/img/Erectile_Dysfunction1.png" class="img-fluid" alt="">
-            </div>
-            <div class="col-lg-6 col-sm-12 col-md-12">
-             <span>
-                Focused Extracorporeal Shock Wave Therapy (ESWT): Revitalizing Wellness 
-                Targeted Extracorporeal Shock Wave Therapy, available at Aruna Hospital Couples Clinics, is a non-invasive medical procedure that uses shock waves to stimulate healing and improve blood circulation in specific areas of the body become bodies. .<br>
-                Procedure Overview: <br>
-                Assessment: Our experienced specialists will assess your specific condition to determine whether ESWT is the right treatment option for you. 
-                Concentrated treatment: During the treatment, targeted shock waves are delivered to the affected area, promoting tissue regeneration and relieving pain. <br>
-                Pleasant Experience: ESWT is generally painless and requires no anesthesia or downtime.<br> Benefits: ESWT has been proven effective in treating a variety of conditions, including musculoskeletal pain, erectile dysfunction, and more.<br> 
-                Recovery: Most patients can return to their daily activities immediately after the procedure. <br>
-                If you are looking for a non-invasive and effective solution to your condition, contact Aruna Hospital Couples Clinic to learn more about how targeted extracorporeal shockwave therapy can help you revive your well-being.
-             </span>
-            </div>
-        </div>
-    </div>
-</section>
-<!--  EXECTILE DYSFUNCTION  -->
-
-<!-- URINE INCONTINENCE-->
-<section>
-    <div class="container mb-5">
-        <div class="row"> 
-            <h3 class="pb-5">Urine Incontinence</h3>
-            <div class="col-lg-6 col-sm-12 col-md-12">
-             <span>
-                Focused Extracorporeal Shock Wave Therapy (ESWT): Revitalizing Wellness 
-                Targeted Extracorporeal Shock Wave Therapy, available at Aruna Hospital Couples Clinics, is a non-invasive medical procedure that uses shock waves to stimulate healing and improve blood circulation in specific areas of the body become bodies. .<br>
-                Procedure Overview: <br>
-                Assessment: Our experienced specialists will assess your specific condition to determine whether ESWT is the right treatment option for you. 
-                Concentrated treatment: During the treatment, targeted shock waves are delivered to the affected area, promoting tissue regeneration and relieving pain. <br>
-                Pleasant Experience: ESWT is generally painless and requires no anesthesia or downtime.<br> Benefits: ESWT has been proven effective in treating a variety of conditions, including musculoskeletal pain, erectile dysfunction, and more.<br> 
-                Recovery: Most patients can return to their daily activities immediately after the procedure. <br>
-                If you are looking for a non-invasive and effective solution to your condition, contact Aruna Hospital Couples Clinic to learn more about how targeted extracorporeal shockwave therapy can help you revive your well-being.
-             </span>
-            </div>
-            <div class="col-lg-6 col-sm-12 col-md-12">
-                <img src="assets/img/Erectile_Dysfunction2.png" class="img-fluid" alt="">
-             </div>
-        </div>
-    </div>
-</section>
-<!-- ENDING  URINE INCONTINENCE  -->
-
-<!-- PREMATURE EJACULATION -->
-<section>
-    <div class="container mb-5">
-        <div class="row"> 
-            <h3 class="pb-5">Premature Ejaculation</h3>
-            <div class="col-lg-6 col-sm-12 col-md-12">
-               <img src="assets/img/Erectile_Dysfunction3.png" class="img-fluid" alt="">
-            </div>
-            <div class="col-lg-6 col-sm-12 col-md-12">
-             <span>
-                Focused Extracorporeal Shock Wave Therapy (ESWT): Revitalizing Wellness 
-                Targeted Extracorporeal Shock Wave Therapy, available at Aruna Hospital Couples Clinics, is a non-invasive medical procedure that uses shock waves to stimulate healing and improve blood circulation in specific areas of the body become bodies. .<br>
-                Procedure Overview: <br>
-                Assessment: Our experienced specialists will assess your specific condition to determine whether ESWT is the right treatment option for you. 
-                Concentrated treatment: During the treatment, targeted shock waves are delivered to the affected area, promoting tissue regeneration and relieving pain. <br>
-                Pleasant Experience: ESWT is generally painless and requires no anesthesia or downtime.<br> Benefits: ESWT has been proven effective in treating a variety of conditions, including musculoskeletal pain, erectile dysfunction, and more.<br> 
-                Recovery: Most patients can return to their daily activities immediately after the procedure. <br>
-                If you are looking for a non-invasive and effective solution to your condition, contact Aruna Hospital Couples Clinic to learn more about how targeted extracorporeal shockwave therapy can help you revive your well-being.
-             </span>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- ENDING  PREMATURE EJACULATION  -->
 
 <!--  Focused Extracorporeal Shock wave Therapy   -->
 <section>
@@ -198,7 +118,7 @@
                 If you are looking for a non-invasive and effective solution to your condition, contact Aruna Hospital Couples Clinic to learn more about how targeted extracorporeal shockwave therapy can help you revive your well-being.
              </span>
             </div>
-            <div class="col-lg-6 col-sm-12 col-md-12">
+            <div class="col-lg-6 col-sm-12 col-md-12 mt-5">
                 <img src="assets/img/Erectile_Dysfunction4.png" class="img-fluid" alt="">
              </div>
         </div>
@@ -252,7 +172,7 @@
                     The P-Shot is a non-invasive and discreet option to enhance male sexual wellness. Contact Aruna Hospital Couple Clinics to learn more about this procedure and how it can benefit you.
                </span>
             </div>
-            <div class="col-lg-6 col-sm-12 col-md-12">
+            <div class="col-lg-6 col-sm-12 col-md-12 mt-5">
                 <img src="assets/img/Erectile_Dysfunction6.png" class="img-fluid" alt="">
             </div>
         </div>
@@ -288,7 +208,7 @@
               <div class="col-lg-2  col-sm-6 footerfirstblock">
                 <h5 class="pb-3">QUICK LINKS</h5>
                 <h6><a href="index.html">Home</a></h6>
-                <h6><a href="index.html">About</a></h6>
+                <h6><a href="about.html">About</a></h6>
                 <h6><a href="femalenonsurgical.html">Services</a></h6>
                 <h6><a href="gallery.html">Gallery</a></h6>
                 <h6><a href="contact.html">Contact</a></h6>
