--- a/femalenonsurgical.html
+++ b/femalenonsurgical.html
@@ -302,7 +302,7 @@
               <div class="col-lg-2  col-sm-6 footerfirstblock">
                 <h5 class="pb-3">QUICK LINKS</h5>
                 <h6><a href="index.html">Home</a></h6>
-                <h6><a href="index.html">About</a></h6>
+                <h6><a href="about.html">About</a></h6>
                 <h6><a href="femalenonsurgical.html">Services</a></h6>
                 <h6><a href="gallery.html">Gallery</a></h6>
                 <h6><a href="contact.html">Contact</a></h6>
