--- a/gallery.html
+++ b/gallery.html
@@ -93,7 +93,49 @@
   <div class="container-fluid mb-5 mt-5">
       <div class="row"> 
           <h3 class="pb-3">GALLERY</h3>
-              <img src="assets/img/maleservicemainimg1.png"  class="img-fluid" alt="">
+
+            <div class=" container firstpart mb-5">
+                <div class="row"> 
+                    <div class="col-4">
+                      <img src="assets/img/galleryimg2.jpeg"  class="img-fluid" alt="">
+                    </div>
+                    <div class="col-4">
+                      <img src="assets/img/galleryimg1.jpeg"  class="img-fluid" alt="">
+                    </div>
+                    <div class="col-4">
+                      <img src="assets/img/galleryimg3.jpeg"  class="img-fluid" alt="">
+                    </div>
+                </div>
+            </div> 
+
+            <div class=" container firstpart mb-5">
+              <div class="row"> 
+                  <div class="col-4">
+                    <img src="assets/img/galleryimg4.jpeg"  class="img-fluid" alt="">
+                  </div>
+                  <div class="col-4">
+                    <img src="assets/img/galleryimg5.jpeg"  class="img-fluid" alt="">
+                  </div>
+                  <div class="col-4">
+                    <img src="assets/img/galleryimg6.jpeg"  class="img-fluid" alt="">
+                  </div>
+              </div>
+          </div>
+
+          <div class=" container firstpart mb-5">
+            <div class="row"> 
+                <div class="col-4">
+                  <img src="assets/img/galleryimg7.jpeg"  class="img-fluid" alt="">
+                </div>
+                <div class="col-4">
+                  <img src="assets/img/galleryimg8.jpeg"  class="img-fluid" alt="">
+                </div>
+                <div class="col-4">
+                  <img src="assets/img/galleryimg9.jpeg"  class="img-fluid" alt="">
+                </div>
+            </div>
+        </div>
+
       </div>
   </div>
 </section>
@@ -128,7 +170,7 @@
              <div class="col-lg-2  col-sm-6 footerfirstblock">
                 <h5 class="pb-3">QUICK LINKS</h5>
                 <h6><a href="index.html">Home</a></h6>
-                <h6><a href="index.html">About</a></h6>
+                <h6><a href="about.html">About</a></h6>
                 <h6><a href="femalenonsurgical.html">Services</a></h6>
                 <h6><a href="gallery.html">Gallery</a></h6>
                 <h6><a href="contact.html">Contact</a></h6>
