--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
       <div class="container p-4 "> 
         <div class="row">
           <div class="col-lg-6  col-md-12  col-sm-12 mt-5">
-             <img src="assets/img/contact.png" alt="" >
+             <img src="assets/img/contact.png" class="img-fluid" alt="" >   
           </div>
           <div class="col-lg-6  col-md-12  col-sm-12">
             <h1 class="mt-5 ms-5">Get In touch</h1>
@@ -132,7 +132,7 @@
                 <input type="text" placeholder="write Your Message"  class="ps-3 pb-5"
                 style="height: 240px;" required>
                 <br>
-                <button type="button" class="btn btn-primary btn-lg btn-block">SUBMIT</button>
+                <button type="button" class="btn btn-primary btn-lg btn-block" id="contactbutton" >Submit</button>
             </form>
         </div>
         </div>
@@ -171,7 +171,7 @@
             <div class="col-lg-2  col-sm-6 footerfirstblock">
               <h5 class="pb-3">QUICK LINKS</h5>
               <h6><a href="index.html">Home</a></h6>
-              <h6><a href="index.html">About</a></h6>
+              <h6><a href="about.html">About</a></h6>
               <h6><a href="femalenonsurgical.html">Services</a></h6>
               <h6><a href="gallery.html">Gallery</a></h6>
               <h6><a href="contact.html">Contact</a></h6>
