--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
   <!-- Adding bootstrap caursel cards sliders  plugin -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
   <!-- Adding bootstrap icons plugin -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
+
+  <!-- Adding bootstrap plugin for Header -->
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
 
 </head>
 
@@ -80,6 +90,7 @@
 
 
   <!-- Header Small Screen only  -->
+
   <nav class="navbar  navbar-light d-sm-block d-md-none d-lg-none shadow">
     <a class="navbar-brand" href="#">
       <img src="assets/img/logo.png" alt="">
@@ -105,7 +116,7 @@
         <a class="nav-item nav-link mt-2" href="about.html" id="navlink2">
           <h5>About</h5>
         </a>
-        <a class="nav-item nav-link mt-2" href="index.html" id="navlink2">
+        <a class="nav-item nav-link mt-2" href="#ourservices" id="navlink2">
           <h5>Services</h5>
         </a>
         <a class="nav-item nav-link mt-2" href="gallery.html" id="navlink2">
@@ -120,6 +131,7 @@
       </div>
     </div>
   </nav>
+
   <!-- Ending Header Small Screen only -->
 
 
@@ -199,7 +211,7 @@
             </a>
           </div>
           <div class="col-lg-3">
-            <a href="femalenonsurgical.html">
+            <a href="#ourservices">
               <p>Services</p>
             </a>
           </div>
@@ -248,7 +260,7 @@
   <!--  ENDING ARE YOU LOOKING  -->
 
   <!-- OUR SERVICES -->
-  <div class="container-fluid ourservices">
+  <div class="container-fluid ourservices" id="ourservices">
     <h1 class="text-center">Our services</h1>
     <h6 class="text-center mb-5">We provide specialized cosmetic gynecology services.</h6>
 
@@ -321,7 +333,7 @@
                   <p class="card-text">TYour goals and concerns are our top priority. We take the time to understand
                     your
                     specific needs and create customized treatment plans to achieve the results you desire. Cosmetic
-                    Gynecology in Kakinada At Aruna Hospital Couples Clinics, we are proud to be at the forefront of
+                    Gynecology at Aruna Hospital Couples Clinics, we are proud to be at the forefront of
                     Cosmetic Gynecology in Kakinada. </p>
                   <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                 </div>
@@ -397,6 +409,7 @@
   <!-- ENDING  OUR SERVICES -->
 
   <!-- WHY CHOOSE -->
+
   <section class="mt-5 ms-5 me-5">
     <div class="container areyoulooking">
       <div class="row">
@@ -416,6 +429,7 @@
       </div>
     </div>
   </section>
+
   <!-- ENDING   WHY CHOOSE -->
 
   <!-- VAGINAL REJUVENATION -->
@@ -501,9 +515,6 @@
                 <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse"
                   aria-labelledby="panelsStayOpen-headingFour">
                   <div class="accordion-body" style="background-color: #00304D; color: #ffff;">
-                    <li>Urine Incontinence</li>
-                    <li>Premature Ejaculation</li>
-                    <li>Erectile Dysfunction</li>
                     <li>Focused Extracorporeal Shockwave Therapy</li>
                     <li>HIFEM Chair (Emsella Chair)</li>
                     <li>P-Shot</li>
@@ -604,7 +615,7 @@
                 </div>
                 <div class="col-md-7 text-center text-md-left align-self-center">
                   <!-- Doctor Details -->
-                  <h3 class="mt-3 mt-md-0">Dr. Chavakula <br />Seshaggiri Rao</h3>
+                  <h3 class="mt-3 mt-md-0 pt-4 mt-2">Dr. Chavakula <br />Seshaggiri Rao</h3>
                   <p class="mb-0">M.S. General Surgery</p>
                   <p class="mb-0">Consultant Endoscopy</p>
                   <p class="mb-0">Laparoscopic Surgeon</p>
@@ -710,8 +721,8 @@
             <div class="col-lg-2  col-sm-6 footerfirstblock">
               <h5 class="pb-3">QUICK LINKS</h5>
               <h6><a href="index.html">Home</a></h6>
-              <h6><a href="index.html">About</a></h6>
-              <h6><a href="femalenonsurgical.html">Services</a></h6>
+              <h6><a href="about.html">About</a></h6>
+              <h6><a href="#ourservices">Services</a></h6>
               <h6><a href="gallery.html">Gallery</a></h6>
               <h6><a href="contact.html">Contact</a></h6>
             </div>
@@ -745,6 +756,7 @@
 
   <!-- javascripit scripit plugins -->
   <!-- Bootstrap JS and Popper.js -->
+  
   <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
