adding images in services pages

--- a/ExectileDysfunctionProcedure.html
+++ b/ExectileDysfunctionProcedure.html
@@ -119,7 +119,9 @@
              </span>
             </div>
             <div class="col-lg-6 col-sm-12 col-md-12 mt-5">
-                <img src="assets/img/Erectile_Dysfunction4.png" class="img-fluid" alt="">
+                <!-- <img src="assets/img/Erectile_Dysfunction4.png" class="img-fluid" alt=""> -->
+                <img src="assets/img/forced 554546.png" class="img-fluid" alt="">
+
              </div>
         </div>
     </div>
@@ -172,8 +174,10 @@
                     The P-Shot is a non-invasive and discreet option to enhance male sexual wellness. Contact Aruna Hospital Couple Clinics to learn more about this procedure and how it can benefit you.
                </span>
             </div>
-            <div class="col-lg-6 col-sm-12 col-md-12 mt-5">
-                <img src="assets/img/Erectile_Dysfunction6.png" class="img-fluid" alt="">
+            <div class="col-lg-6 col-sm-12 col-md-12 ">
+                <!-- <img src="assets/img/Erectile_Dysfunction6.png" class="img-fluid" alt=""> -->
+                <img src="assets/img/P-shot 605546.png" class="img-fluid" alt="">
+
             </div>
         </div>
     </div>
