--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
                   <!-- <a href="appoinment.html" class="btn btn-outline-primary" id="button"> Learn more </a> -->
                 </div>
                 <div class="col-lg-6 col-sm-6 col-md-12">
-                  <img src="assets/img/image1.png" alt="" height="auto" class="img-fluid" width="auto">
+                  <!-- <img src="assets/img/image1.png" alt="" height="auto" class="img-fluid" width="auto"> -->
+                  <img src="assets/img/Aruna 522505.png" alt="" height="auto" class="img-fluid" width="auto">
                 </div>
               </div>
             </div>
@@ -253,7 +254,9 @@
     <div class="container areyoulooking">
       <div class="row">
         <div class="col-lg-6 col-sm-12 col-md-12">
-          <img src="assets/img/image2.png" class="img-fluid" alt="">
+          <!-- <img src="assets/img/image2.png" class="img-fluid" alt=""> -->
+          <img src="assets/img/Aruna 570521.png" class="img-fluid" alt="">
+
         </div>
         <div class="col-lg-6 col-sm-12 col-md-12 p-5 mt-5">
           <h1 class="mb-3 pt-3">Are you looking for the <br>
@@ -435,7 +438,8 @@
           <a href="about.html" class="btn btn-primary" id="button">learn more</a>
         </div>
         <div class="col-lg-6 col-sm-12 col-md-12">
-          <img src="assets/img/image3.png" class="img-fluid" alt="">
+          <!-- <img src="assets/img/image3.png" class="img-fluid" alt=""> -->
+          <img src="assets/img/Aruna 521477.png" class="img-fluid" alt="">
         </div>
       </div>
     </div>
