--- a/femalenonsurgical.html
+++ b/femalenonsurgical.html
@@ -152,7 +152,8 @@
         <div class="row"> 
             <h3 class="pb-3" >VAGINAL DRYNESS AND INFECTION </h3>
             <div class="col-lg-6 col-md-12 col-sm-12">
-                <img src="assets/img/3.png" class="img-fluid" alt="">
+                <!-- <img src="assets/img/3.png" class="img-fluid" alt=""> -->
+                <img src="assets/img/vaginal 380570.png" class="img-fluid" alt="">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
              <span>
@@ -202,8 +203,10 @@
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3">POST DELIVERY REHABILITATION</h3>
-            <div class="col-lg-6 col-md-12 col-sm-12 mt-5 pt-5">
-                <img src="assets/img/5.png"  class="img-fluid" alt="">
+            <div class="col-lg-6 col-md-12 col-sm-12 ">
+                <!-- <img src="assets/img/5.png"  class="img-fluid" alt=""> -->
+                <img src="assets/img/post delivery 546478.png"  class="img-fluid" alt="">
+
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
              <span>
