--- a/male.html
+++ b/male.html
@@ -143,7 +143,9 @@
                </span>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
-                <img src="assets/img/maleserviceimg2.png" class="img-fluid" alt="">
+                <!-- <img src="assets/img/maleserviceimg2.png" class="img-fluid" alt=""> -->
+                <img src="assets/img/Urine 564406.png" class="img-fluid" alt="">
+
             </div>
         </div>
     </div>
