adding images  in bootstrap collaspe

--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
         </div>
       </a>
       <a class="nav-item nav-link mt-2" href="appoinment.html" id="navlink2">
-        <button type="button" class="btn btn-primary">APPOINTMENT</button>
+        <button type="button" class="btn btn-primary "  id="button">APPOINTMENT</button>
       </a>
     </div>
   </div>
@@ -120,7 +120,7 @@
                       Hospital in Kakinada - Aruna Hospital Couples Clinic. Arrange a consultation with our experts today and take the first step towards more self-confidence.
                       </p>
                       <div class="aboutbtn text-center"> 
-                         <a href="appoinment.html" class="btn btn-primary">APPOINTMENT</a>
+                         <a href="appoinment.html" class="btn btn-primary" id="button">APPOINTMENT</a>
                       </div> 
                   </div>
                 </div>
